--- a/tpcc.properties
+++ b/tpcc.properties
@@ -17,7 +17,6 @@ WAREHOUSECOUNT=1
 # Data can be generated to tab delimited text files
 # suitable for loading into MySQL with LOAD DATA INFILE
 # or can be loaded directly via JDBC
-#MODE=FILE
 MODE=JDBC
 
 # For FILE mode, specify the output directory for the files.
@@ -35,10 +34,10 @@ SHARDCOUNT=1
 ## JDBC mode and also used for running the benchmarks.    ##
 ############################################################
 
-# MySQL
-DRIVER=com.mysql.jdbc.Driver
-JDBCURL=jdbc:mysql://127.0.0.1:3306/tpcc?useSSL=false&serverTimezone=UTC&autoReconnect=true
-JDBCFETCHSIZE=-2147483648
+# Cache
+DRIVER=com.intersys.jdbc.CacheDriver
+JDBCURL=jdbc:Cache://127.0.0.1:1972/USER
+JDBCFETCHSIZE=100
 
 # dbShards
 #DRIVER=com.dbshards.jdbc.Driver
@@ -46,7 +45,7 @@ JDBCFETCHSIZE=-2147483648
 
 # Credentials
 USER=root
-PASSWORD=
+PASSWORD=root
 
 ############################################################
 # Settings used for Tpcc benchmark only
