--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,12 @@
 
     <dependencies>
 
+        <!-- 需要注册一个本地的依赖 -->
+        <!-- mvn install:install-file -Dfile=/opt/cache/lib/cachejdbc.jar -DgroupId=cachejdbc -DartifactId=cachejdbc -Dversion=1.0 -Dpackaging=jar-->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>6.0.4</version>
+            <groupId>cachejdbc</groupId>
+            <artifactId>cachejdbc</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
